tests/suite/snapshots/suite__case_229q.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SequenceEntry
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Break
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 3
    line: 1
    column: 0
- token: Indent
  start:
    index: 3
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 2
- token: Scalar
  start:
    index: 5
    line: 1
    column: 2
  end:
    index: 9
    line: 1
    column: 6
- token: MappingValue
  start:
    index: 9
    line: 1
    column: 6
  end:
    index: 10
    line: 1
    column: 7
- token: Separator
  start:
    index: 10
    line: 1
    column: 7
  end:
    index: 11
    line: 1
    column: 8
- token: Scalar
  start:
    index: 11
    line: 1
    column: 8
  end:
    index: 23
    line: 1
    column: 20
- token: Break
  start:
    index: 23
    line: 1
    column: 20
  end:
    index: 25
    line: 2
    column: 0
- token: Indent
  start:
    index: 25
    line: 2
    column: 0
  end:
    index: 27
    line: 2
    column: 2
- token: Scalar
  start:
    index: 27
    line: 2
    column: 2
  end:
    index: 29
    line: 2
    column: 4
- token: MappingValue
  start:
    index: 29
    line: 2
    column: 4
  end:
    index: 30
    line: 2
    column: 5
- token: Separator
  start:
    index: 30
    line: 2
    column: 5
  end:
    index: 33
    line: 2
    column: 8
- token: Scalar
  start:
    index: 33
    line: 2
    column: 8
  end:
    index: 35
    line: 2
    column: 10
- token: Break
  start:
    index: 35
    line: 2
    column: 10
  end:
    index: 37
    line: 3
    column: 0
- token: Indent
  start:
    index: 37
    line: 3
    column: 0
  end:
    index: 39
    line: 3
    column: 2
- token: Scalar
  start:
    index: 39
    line: 3
    column: 2
  end:
    index: 42
    line: 3
    column: 5
- token: MappingValue
  start:
    index: 42
    line: 3
    column: 5
  end:
    index: 43
    line: 3
    column: 6
- token: Separator
  start:
    index: 43
    line: 3
    column: 6
  end:
    index: 45
    line: 3
    column: 8
- token: Scalar
  start:
    index: 45
    line: 3
    column: 8
  end:
    index: 50
    line: 3
    column: 13
- token: Break
  start:
    index: 50
    line: 3
    column: 13
  end:
    index: 52
    line: 4
    column: 0
- token: Indent
  start:
    index: 52
    line: 4
    column: 0
  end:
    index: 52
    line: 4
    column: 0
- token: SequenceEntry
  start:
    index: 52
    line: 4
    column: 0
  end:
    index: 53
    line: 4
    column: 1
- token: Break
  start:
    index: 53
    line: 4
    column: 1
  end:
    index: 55
    line: 5
    column: 0
- token: Indent
  start:
    index: 55
    line: 5
    column: 0
  end:
    index: 57
    line: 5
    column: 2
- token: Scalar
  start:
    index: 57
    line: 5
    column: 2
  end:
    index: 61
    line: 5
    column: 6
- token: MappingValue
  start:
    index: 61
    line: 5
    column: 6
  end:
    index: 62
    line: 5
    column: 7
- token: Separator
  start:
    index: 62
    line: 5
    column: 7
  end:
    index: 63
    line: 5
    column: 8
- token: Scalar
  start:
    index: 63
    line: 5
    column: 8
  end:
    index: 73
    line: 5
    column: 18
- token: Break
  start:
    index: 73
    line: 5
    column: 18
  end:
    index: 75
    line: 6
    column: 0
- token: Indent
  start:
    index: 75
    line: 6
    column: 0
  end:
    index: 77
    line: 6
    column: 2
- token: Scalar
  start:
    index: 77
    line: 6
    column: 2
  end:
    index: 79
    line: 6
    column: 4
- token: MappingValue
  start:
    index: 79
    line: 6
    column: 4
  end:
    index: 80
    line: 6
    column: 5
- token: Separator
  start:
    index: 80
    line: 6
    column: 5
  end:
    index: 83
    line: 6
    column: 8
- token: Scalar
  start:
    index: 83
    line: 6
    column: 8
  end:
    index: 85
    line: 6
    column: 10
- token: Break
  start:
    index: 85
    line: 6
    column: 10
  end:
    index: 87
    line: 7
    column: 0
- token: Indent
  start:
    index: 87
    line: 7
    column: 0
  end:
    index: 89
    line: 7
    column: 2
- token: Scalar
  start:
    index: 89
    line: 7
    column: 2
  end:
    index: 92
    line: 7
    column: 5
- token: MappingValue
  start:
    index: 92
    line: 7
    column: 5
  end:
    index: 93
    line: 7
    column: 6
- token: Separator
  start:
    index: 93
    line: 7
    column: 6
  end:
    index: 95
    line: 7
    column: 8
- token: Scalar
  start:
    index: 95
    line: 7
    column: 8
  end:
    index: 100
    line: 7
    column: 13
- token: Break
  start:
    index: 100
    line: 7
    column: 13
  end:
    index: 102
    line: 8
    column: 0

