tests/suite/snapshots/suite__case_236b.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "remaining tokens: invalid\r\n"
  start:
    index: 13
    line: 2
    column: 0
  end:
    index: 13
    line: 2
    column: 0

