tests/suite/snapshots/suite__case_26dv.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: DoubleQuote
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DoubleQuoted
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 5
- token: DoubleQuote
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: Separator
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 7
- token: MappingValue
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: Separator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: Break
  start:
    line: 0
    column: 9
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: DoubleQuote
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: DoubleQuoted
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 7
- token: DoubleQuote
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 8
- token: Separator
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: MappingValue
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: Separator
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 11
- token: Anchor
  start:
    line: 1
    column: 11
  end:
    line: 1
    column: 12
- token: AnchorName
  start:
    line: 1
    column: 12
  end:
    line: 1
    column: 18
- token: Separator
  start:
    line: 1
    column: 18
  end:
    line: 1
    column: 19
- token: Scalar
  start:
    line: 1
    column: 19
  end:
    line: 1
    column: 26
- token: Break
  start:
    line: 1
    column: 26
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: SingleQuote
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: SingleQuoted
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 5
- token: SingleQuote
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: Separator
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 7
- token: MappingValue
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: Separator
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 9
- token: Break
  start:
    line: 2
    column: 9
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: SingleQuote
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: SingleQuoted
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 7
- token: SingleQuote
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Separator
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 9
- token: MappingValue
  start:
    line: 3
    column: 9
  end:
    line: 3
    column: 10
- token: Separator
  start:
    line: 3
    column: 10
  end:
    line: 3
    column: 11
- token: Anchor
  start:
    line: 3
    column: 11
  end:
    line: 3
    column: 12
- token: AnchorName
  start:
    line: 3
    column: 12
  end:
    line: 3
    column: 18
- token: Separator
  start:
    line: 3
    column: 18
  end:
    line: 3
    column: 19
- token: Scalar
  start:
    line: 3
    column: 19
  end:
    line: 3
    column: 26
- token: Break
  start:
    line: 3
    column: 26
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Scalar
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 4
- token: MappingValue
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: Separator
  start:
    line: 4
    column: 5
  end:
    line: 4
    column: 6
- token: Anchor
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 7
- token: AnchorName
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 12
- token: Separator
  start:
    line: 4
    column: 12
  end:
    line: 4
    column: 13
- token: Break
  start:
    line: 4
    column: 13
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 2
- token: Alias
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 3
- token: AnchorName
  start:
    line: 5
    column: 3
  end:
    line: 5
    column: 9
- token: Separator
  start:
    line: 5
    column: 9
  end:
    line: 5
    column: 10
- token: MappingValue
  start:
    line: 5
    column: 10
  end:
    line: 5
    column: 11
- token: Separator
  start:
    line: 5
    column: 11
  end:
    line: 5
    column: 12
- token: Scalar
  start:
    line: 5
    column: 12
  end:
    line: 5
    column: 19
- token: Break
  start:
    line: 5
    column: 19
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: Scalar
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 4
- token: MappingValue
  start:
    line: 6
    column: 4
  end:
    line: 6
    column: 5
- token: Separator
  start:
    line: 6
    column: 5
  end:
    line: 6
    column: 6
- token: Break
  start:
    line: 6
    column: 6
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 2
- token: Alias
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 3
- token: AnchorName
  start:
    line: 7
    column: 3
  end:
    line: 7
    column: 9
- token: Separator
  start:
    line: 7
    column: 9
  end:
    line: 7
    column: 10
- token: MappingValue
  start:
    line: 7
    column: 10
  end:
    line: 7
    column: 11
- token: Separator
  start:
    line: 7
    column: 11
  end:
    line: 7
    column: 12
- token: Scalar
  start:
    line: 7
    column: 12
  end:
    line: 7
    column: 19
- token: Break
  start:
    line: 7
    column: 19
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 0
- token: Scalar
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 4
- token: Separator
  start:
    line: 8
    column: 4
  end:
    line: 8
    column: 7
- token: MappingValue
  start:
    line: 8
    column: 7
  end:
    line: 8
    column: 8
- token: Separator
  start:
    line: 8
    column: 8
  end:
    line: 8
    column: 12
- token: Break
  start:
    line: 8
    column: 12
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 1
- token: Separator
  start:
    line: 9
    column: 1
  end:
    line: 9
    column: 2
- token: Scalar
  start:
    line: 9
    column: 2
  end:
    line: 9
    column: 9
- token: Break
  start:
    line: 9
    column: 9
  end:
    line: 10
    column: 0
- token: Indent
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 0
- token: Scalar
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 4
- token: MappingValue
  start:
    line: 10
    column: 4
  end:
    line: 10
    column: 5
- token: Separator
  start:
    line: 10
    column: 5
  end:
    line: 10
    column: 6
- token: Break
  start:
    line: 10
    column: 6
  end:
    line: 11
    column: 0
- token: Indent
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 2
- token: Anchor
  start:
    line: 11
    column: 2
  end:
    line: 11
    column: 3
- token: AnchorName
  start:
    line: 11
    column: 3
  end:
    line: 11
    column: 10
- token: Separator
  start:
    line: 11
    column: 10
  end:
    line: 11
    column: 11
- token: SingleQuote
  start:
    line: 11
    column: 11
  end:
    line: 11
    column: 12
- token: SingleQuoted
  start:
    line: 11
    column: 12
  end:
    line: 11
    column: 16
- token: SingleQuote
  start:
    line: 11
    column: 16
  end:
    line: 11
    column: 17
- token: Separator
  start:
    line: 11
    column: 17
  end:
    line: 11
    column: 18
- token: MappingValue
  start:
    line: 11
    column: 18
  end:
    line: 11
    column: 19
- token: Separator
  start:
    line: 11
    column: 19
  end:
    line: 11
    column: 20
- token: Scalar
  start:
    line: 11
    column: 20
  end:
    line: 11
    column: 27
- token: Break
  start:
    line: 11
    column: 27
  end:
    line: 12
    column: 0

