tests/suite/snapshots/suite__case_27na.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Directive
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: DirectiveName
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 5
    line: 0
    column: 5
- token: Separator
  start:
    index: 5
    line: 0
    column: 5
  end:
    index: 6
    line: 0
    column: 6
- token: YamlVersion
  start:
    index: 6
    line: 0
    column: 6
  end:
    index: 9
    line: 0
    column: 9
- token: Break
  start:
    index: 9
    line: 0
    column: 9
  end:
    index: 11
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    index: 11
    line: 1
    column: 0
  end:
    index: 14
    line: 1
    column: 3
- token: Separator
  start:
    index: 14
    line: 1
    column: 3
  end:
    index: 15
    line: 1
    column: 4
- token: Scalar
  start:
    index: 15
    line: 1
    column: 4
  end:
    index: 19
    line: 1
    column: 8
- token: Break
  start:
    index: 19
    line: 1
    column: 8
  end:
    index: 21
    line: 2
    column: 0

