tests/suite/snapshots/suite__case_2cms.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "invalid block node at this\r\n is\r\n  invalid: x\r\n"
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0

