tests/suite/snapshots/suite__case_2g84_00.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "invalid block node at  |0\r\n"
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 3

