tests/suite/snapshots/suite__case_2g84_01.snap
---
source: tests/suite/cases.gen.rs
expression: diagnostics
---
- message: "invalid block node at  |10\r\n"
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 3

